# Obliviate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: MemoryChunk.cpp  MemoryChunk.h  MemoryPool.cpp  MemoryPool.h  main.cpp
src/test/: MyAllocate.h  StackAlloc.h
